# Milvus_demo

./: README.md
full_text_search_milvus/: Readme.md  full_text_search.ipynb  full_text_search.py  pyproject.toml  standalone_embed.sh
hybrid_search/: hybrid_search.ipynb  pyproject.toml
langchain_demos/: langgraph-rag-agent-local.ipynb
langchain_demos/langserve_demos/: Dockerfile  README.md  app.py  requirements.txt
llama_index_demos/: Berlin_parliemant_ollama_mivus_lite.ipynb  Llama_agents_internet.ipynb  README.md  ollama_mivus_lite_doordash.ipynb  ollama_mivus_lite_doordash_berlin_parliament.ipynb  ollama_mivus_lite_wework.ipynb  pyproject.toml
llama_index_demos/llama_agents/: Llama_agents_metadata.ipynb
milvus_colpali/: colpali_milvus_blog.md  hello.py  pyproject.toml  use_colpali_with_milvus.py
milvus_rag/: README.md  pyproject.toml  rag_milvus_ollama.ipynb  requirements.txt
mistral_ocr_milvus/: .env.example  README.md  document_understanding_milvus.ipynb  document_understanding_milvus.py  pyproject.toml  pyprojet.toml
multi_vector_search/: ann_search.py  pyproject.toml
multimodal_milvus_clip/: README.md  multimodal.ipynb  multimodal_demo.ipynb  pyproject.toml
