[tool.poetry]
name = "hybrid-search"
version = "0.1.0"
description = ""
authors = ["Stephen Batifol]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pymilvus = {extras = ["model"], version = "^2.4.0"}
jupyterlab = "^4.1.7"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
