[tool.poetry]
name = "llama-index-demos"
version = "0.1.0"
description = ""
authors = ["Stephen Batifol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.0"
pymilvus = "^2.4.3"
ollama = "^0.2.0"
llama-index-llms-ollama = "^0.1.4"
llama-index-vector-stores-milvus = "^0.1.14"
llama-index-embeddings-jinaai = "^0.1.5"
llama-index-readers-file = "^0.1.22"
sentence-transformers = "^2.7.0"
llama-index-embeddings-huggingface = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
