[tool.poetry]
name = "multi-vector-search"
version = "0.1.0"
description = ""
authors = ["Stephen Batifol"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pymilvus = "^2.4.0"
scipy = "^1.13.0"
langchain = "^0.1.16"
openai = "^1.23.2"
langchain-experimental = "^0.0.57"
langchain-community = "^0.0.34"
pillow = "^10.3.0"
pydantic = "^2.7.0"
lxml = "^5.2.1"
matplotlib = "^3.8.4"
tiktoken = "^0.6.0"
unstructured = {extras = ["all-docs"], version = "^0.13.3"}
jupyterlab = "^4.1.6"
langchain-openai = "^0.1.3"
pytesseract = "^0.3.10"
llama-index-multi-modal-llms-ollama = "^0.1.3"
llama-index-vector-stores-milvus = "^0.1.10"
llama-index-readers-file = "^0.1.19"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-clip = "^0.1.5"
llama-index-llms-openai = "^0.1.16"
clip = {git = "https://github.com/openai/CLIP.git"}
llama-index-embeddings-jinaai = "^0.1.3"
llama-index-embeddings-openai = "^0.1.9"
llama-index-multi-modal-llms-openai = "^0.1.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
