[tool.poetry]
name = "multimodal-milvus-clip"
version = "0.1.0"
description = ""
authors = ["stephen batifol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymilvus = "^2.4.1"
jupyterlab = "^4.1.8"
requests = "^2.31.0"
bs4 = "^0.0.2"
google-search-results = "^2.4.2"
lxml = "^5.2.1"
transformers = "^4.40.1"
torch = "^2.3.0"
datasets = "^2.19.1"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
reuires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
