[tool.poetry]
name = "multimodal-milvus-clip"
version = "0.1.0"
description = ""
authors = ["stephen batifol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymilvus = {version = "==2.4.*", extras = ["model"]}
jupyterlab = "^4.1.8"
requests = "^2.31.0"
bs4 = "^0.0.2"
google-search-results = "^2.4.2"
lxml = "^5.2.1"
transformers = "^4.40.1"
torch = "^2.3.0"
datasets = "^2.19.1"
pillow = "^10.3.0"
llama-index = "^0.10.35"
ftfy = "^6.2.0"
regex = "^2024.4.28"
tqdm = "^4.66.4"
clip = {git = "https://github.com/openai/CLIP.git"}
torchvision = "^0.18.0"
matplotlib = "^3.8.4"
scikit-image = "^0.23.2"
llama-index-vector-stores-milvus = "^0.1.11"
llama-index-embeddings-huggingface = "^0.2.0"
wikipedia = "^1.4.0"
llama-index-llms-ollama = "^0.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
reuires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
